// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/group_settings/GroupsList.tsx > should match snapshot, with empty groups 1`] = `
<div>
  <div
    class="groups-list"
  >
    <div
      class="groups-list--global-actions"
    >
      <div
        class="group-list-search"
      >
        <input
          placeholder="Search"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="search__icon"
        >
          <svg
            aria-label="Search Icon"
            height="16px"
            role="img"
            viewBox="0 0 17 17"
            width="16px"
          >
            <path
              d="M16.398 15.138L13.014 11.754C13.458 11.178 13.8 10.548 14.04 9.86399C14.28 9.14399 14.4 8.40599 14.4 7.64999C14.4 6.42599 14.094 5.29199 13.482 4.24799C12.882 3.22799 12.072 2.41799 11.052 1.81799C10.008 1.20599 8.874 0.899988 7.65 0.899988C6.426 0.899988 5.292 1.20599 4.248 1.81799C3.228 2.41799 2.418 3.22799 1.818 4.24799C1.206 5.29199 0.9 6.42599 0.9 7.64999C0.9 8.87399 1.206 10.008 1.818 11.052C2.418 12.072 3.228 12.882 4.248 13.482C5.292 14.094 6.426 14.4 7.65 14.4C8.406 14.4 9.138 14.274 9.846 14.022C10.53 13.794 11.16 13.458 11.736 13.014L15.138 16.398C15.306 16.566 15.516 16.65 15.768 16.65C16.02 16.65 16.23 16.56 16.398 16.38C16.566 16.212 16.65 16.008 16.65 15.768C16.65 15.528 16.566 15.318 16.398 15.138ZM2.7 7.64999C2.7 6.74999 2.922 5.92199 3.366 5.16599C3.81 4.40999 4.41 3.80999 5.166 3.36599C5.922 2.92199 6.75 2.69999 7.65 2.69999C8.55 2.69999 9.378 2.92199 10.134 3.36599C10.89 3.80999 11.49 4.40999 11.934 5.16599C12.378 5.92199 12.6 6.74999 12.6 7.64999C12.6 8.54999 12.378 9.37799 11.934 10.134C11.49 10.89 10.89 11.49 10.134 11.934C9.378 12.378 8.55 12.6 7.65 12.6C6.75 12.6 5.922 12.378 5.166 11.934C4.41 11.49 3.81 10.89 3.366 10.134C2.922 9.37799 2.7 8.54999 2.7 7.64999Z"
            />
          </svg>
        </span>
        <i
          class="fa fa-times-circle group-filter-action hidden"
        />
        <i
          class="fa fa-caret-down group-filter-action "
        />
      </div>
      <div
        class="group-list-link-unlink"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          <i
            class="icon icon-link-variant"
          />
          Link Selected Groups
        </button>
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="groups-list-empty"
      >
        No groups found
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList.tsx > should match snapshot, with groups 1`] = `
<div>
  <div
    class="groups-list"
  >
    <div
      class="groups-list--global-actions"
    >
      <div
        class="group-list-search"
      >
        <input
          placeholder="Search"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="search__icon"
        >
          <svg
            aria-label="Search Icon"
            height="16px"
            role="img"
            viewBox="0 0 17 17"
            width="16px"
          >
            <path
              d="M16.398 15.138L13.014 11.754C13.458 11.178 13.8 10.548 14.04 9.86399C14.28 9.14399 14.4 8.40599 14.4 7.64999C14.4 6.42599 14.094 5.29199 13.482 4.24799C12.882 3.22799 12.072 2.41799 11.052 1.81799C10.008 1.20599 8.874 0.899988 7.65 0.899988C6.426 0.899988 5.292 1.20599 4.248 1.81799C3.228 2.41799 2.418 3.22799 1.818 4.24799C1.206 5.29199 0.9 6.42599 0.9 7.64999C0.9 8.87399 1.206 10.008 1.818 11.052C2.418 12.072 3.228 12.882 4.248 13.482C5.292 14.094 6.426 14.4 7.65 14.4C8.406 14.4 9.138 14.274 9.846 14.022C10.53 13.794 11.16 13.458 11.736 13.014L15.138 16.398C15.306 16.566 15.516 16.65 15.768 16.65C16.02 16.65 16.23 16.56 16.398 16.38C16.566 16.212 16.65 16.008 16.65 15.768C16.65 15.528 16.566 15.318 16.398 15.138ZM2.7 7.64999C2.7 6.74999 2.922 5.92199 3.366 5.16599C3.81 4.40999 4.41 3.80999 5.166 3.36599C5.922 2.92199 6.75 2.69999 7.65 2.69999C8.55 2.69999 9.378 2.92199 10.134 3.36599C10.89 3.80999 11.49 4.40999 11.934 5.16599C12.378 5.92199 12.6 6.74999 12.6 7.64999C12.6 8.54999 12.378 9.37799 11.934 10.134C11.49 10.89 10.89 11.49 10.134 11.934C9.378 12.378 8.55 12.6 7.65 12.6C6.75 12.6 5.922 12.378 5.166 11.934C4.41 11.49 3.81 10.89 3.366 10.134C2.922 9.37799 2.7 8.54999 2.7 7.64999Z"
            />
          </svg>
        </span>
        <i
          class="fa fa-times-circle group-filter-action hidden"
        />
        <i
          class="fa fa-caret-down group-filter-action "
        />
      </div>
      <div
        class="group-list-link-unlink"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          <i
            class="icon icon-link-variant"
          />
          Link Selected Groups
        </button>
      </div>
    </div>
    <div
      class="groups-list--header"
    >
      <div
        class="group-name"
      >
        Name
      </div>
      <div
        class="group-content"
      >
        <div
          class="group-description"
        >
          Mattermost Linking
        </div>
        <div
          class="group-actions"
        />
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="group "
        id="test1_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test1
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test2_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test2
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-link"
                />
                Linked
              </a>
            </span>
            <span
              class="group-actions"
            >
              <a
                href="/admin_console/user_management/groups/group-id-1"
                id="test2_configure"
              >
                Configure
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="groups-list--footer"
    >
      <div
        class="counter"
      >
        1 - 2 of 2
      </div>
      <button
        class="btn btn-tertiary prev disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-left"
          title="Previous Icon"
        />
      </button>
      <button
        class="btn btn-tertiary next disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-right"
          title="Next Icon"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList.tsx > should match snapshot, with many results 1`] = `
<div>
  <div
    class="groups-list"
  >
    <div
      class="groups-list--global-actions"
    >
      <div
        class="group-list-search"
      >
        <input
          placeholder="Search"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="search__icon"
        >
          <svg
            aria-label="Search Icon"
            height="16px"
            role="img"
            viewBox="0 0 17 17"
            width="16px"
          >
            <path
              d="M16.398 15.138L13.014 11.754C13.458 11.178 13.8 10.548 14.04 9.86399C14.28 9.14399 14.4 8.40599 14.4 7.64999C14.4 6.42599 14.094 5.29199 13.482 4.24799C12.882 3.22799 12.072 2.41799 11.052 1.81799C10.008 1.20599 8.874 0.899988 7.65 0.899988C6.426 0.899988 5.292 1.20599 4.248 1.81799C3.228 2.41799 2.418 3.22799 1.818 4.24799C1.206 5.29199 0.9 6.42599 0.9 7.64999C0.9 8.87399 1.206 10.008 1.818 11.052C2.418 12.072 3.228 12.882 4.248 13.482C5.292 14.094 6.426 14.4 7.65 14.4C8.406 14.4 9.138 14.274 9.846 14.022C10.53 13.794 11.16 13.458 11.736 13.014L15.138 16.398C15.306 16.566 15.516 16.65 15.768 16.65C16.02 16.65 16.23 16.56 16.398 16.38C16.566 16.212 16.65 16.008 16.65 15.768C16.65 15.528 16.566 15.318 16.398 15.138ZM2.7 7.64999C2.7 6.74999 2.922 5.92199 3.366 5.16599C3.81 4.40999 4.41 3.80999 5.166 3.36599C5.922 2.92199 6.75 2.69999 7.65 2.69999C8.55 2.69999 9.378 2.92199 10.134 3.36599C10.89 3.80999 11.49 4.40999 11.934 5.16599C12.378 5.92199 12.6 6.74999 12.6 7.64999C12.6 8.54999 12.378 9.37799 11.934 10.134C11.49 10.89 10.89 11.49 10.134 11.934C9.378 12.378 8.55 12.6 7.65 12.6C6.75 12.6 5.922 12.378 5.166 11.934C4.41 11.49 3.81 10.89 3.366 10.134C2.922 9.37799 2.7 8.54999 2.7 7.64999Z"
            />
          </svg>
        </span>
        <i
          class="fa fa-times-circle group-filter-action hidden"
        />
        <i
          class="fa fa-caret-down group-filter-action "
        />
      </div>
      <div
        class="group-list-link-unlink"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          <i
            class="icon icon-link-variant"
          />
          Link Selected Groups
        </button>
      </div>
    </div>
    <div
      class="groups-list--header"
    >
      <div
        class="group-name"
      >
        Name
      </div>
      <div
        class="group-content"
      >
        <div
          class="group-description"
        >
          Mattermost Linking
        </div>
        <div
          class="group-actions"
        />
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="group "
        id="test1_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test1
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test2_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test2
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-link"
                />
                Linked
              </a>
            </span>
            <span
              class="group-actions"
            >
              <a
                href="/admin_console/user_management/groups/group-id-1"
                id="test2_configure"
              >
                Configure
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test3_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test3
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-link"
                />
                Linked
              </a>
            </span>
            <span
              class="group-actions"
            >
              <a
                href="/admin_console/user_management/groups/group-id-2"
                id="test3_edit"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test4_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test4
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test5_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test5
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test6_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test6
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test7_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test7
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test8_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test8
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test9_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test9
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test10_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test10
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="groups-list--footer"
    >
      <div
        class="counter"
      >
        1 - 33 of 33
      </div>
      <button
        class="btn btn-tertiary prev disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-left"
          title="Previous Icon"
        />
      </button>
      <button
        class="btn btn-tertiary next disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-right"
          title="Next Icon"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupsList.tsx > should match snapshot, with results including configured 1`] = `
<div>
  <div
    class="groups-list"
  >
    <div
      class="groups-list--global-actions"
    >
      <div
        class="group-list-search"
      >
        <input
          placeholder="Search"
          type="text"
          value=""
        />
        <span
          aria-hidden="true"
          class="search__icon"
        >
          <svg
            aria-label="Search Icon"
            height="16px"
            role="img"
            viewBox="0 0 17 17"
            width="16px"
          >
            <path
              d="M16.398 15.138L13.014 11.754C13.458 11.178 13.8 10.548 14.04 9.86399C14.28 9.14399 14.4 8.40599 14.4 7.64999C14.4 6.42599 14.094 5.29199 13.482 4.24799C12.882 3.22799 12.072 2.41799 11.052 1.81799C10.008 1.20599 8.874 0.899988 7.65 0.899988C6.426 0.899988 5.292 1.20599 4.248 1.81799C3.228 2.41799 2.418 3.22799 1.818 4.24799C1.206 5.29199 0.9 6.42599 0.9 7.64999C0.9 8.87399 1.206 10.008 1.818 11.052C2.418 12.072 3.228 12.882 4.248 13.482C5.292 14.094 6.426 14.4 7.65 14.4C8.406 14.4 9.138 14.274 9.846 14.022C10.53 13.794 11.16 13.458 11.736 13.014L15.138 16.398C15.306 16.566 15.516 16.65 15.768 16.65C16.02 16.65 16.23 16.56 16.398 16.38C16.566 16.212 16.65 16.008 16.65 15.768C16.65 15.528 16.566 15.318 16.398 15.138ZM2.7 7.64999C2.7 6.74999 2.922 5.92199 3.366 5.16599C3.81 4.40999 4.41 3.80999 5.166 3.36599C5.922 2.92199 6.75 2.69999 7.65 2.69999C8.55 2.69999 9.378 2.92199 10.134 3.36599C10.89 3.80999 11.49 4.40999 11.934 5.16599C12.378 5.92199 12.6 6.74999 12.6 7.64999C12.6 8.54999 12.378 9.37799 11.934 10.134C11.49 10.89 10.89 11.49 10.134 11.934C9.378 12.378 8.55 12.6 7.65 12.6C6.75 12.6 5.922 12.378 5.166 11.934C4.41 11.49 3.81 10.89 3.366 10.134C2.922 9.37799 2.7 8.54999 2.7 7.64999Z"
            />
          </svg>
        </span>
        <i
          class="fa fa-times-circle group-filter-action hidden"
        />
        <i
          class="fa fa-caret-down group-filter-action "
        />
      </div>
      <div
        class="group-list-link-unlink"
      >
        <button
          class="btn btn-primary"
          type="button"
        >
          <i
            class="icon icon-link-variant"
          />
          Link Selected Groups
        </button>
      </div>
    </div>
    <div
      class="groups-list--header"
    >
      <div
        class="group-name"
      >
        Name
      </div>
      <div
        class="group-content"
      >
        <div
          class="group-description"
        >
          Mattermost Linking
        </div>
        <div
          class="group-actions"
        />
      </div>
    </div>
    <div
      class="groups-list--body"
      id="groups-list--body"
    >
      <div
        class="group "
        id="test1_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test1
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-unlink"
                />
                Not Linked
              </a>
            </span>
            <span
              class="group-actions"
            />
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test2_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test2
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-link"
                />
                Linked
              </a>
            </span>
            <span
              class="group-actions"
            >
              <a
                href="/admin_console/user_management/groups/group-id-1"
                id="test2_configure"
              >
                Configure
              </a>
            </span>
          </div>
        </div>
      </div>
      <div
        class="group "
        id="test3_group"
      >
        <div
          class="group-row"
        >
          <div
            class="group-name"
          >
            <div
              class="group-check "
            />
            <span>
              test3
            </span>
          </div>
          <div
            class="group-content"
          >
            <span
              class="group-description"
            >
              <a
                class=""
                href="#"
              >
                <i
                  class="icon fa fa-link"
                />
                Linked
              </a>
            </span>
            <span
              class="group-actions"
            >
              <a
                href="/admin_console/user_management/groups/group-id-2"
                id="test3_edit"
              >
                Edit
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="groups-list--footer"
    >
      <div
        class="counter"
      >
        1 - 3 of 3
      </div>
      <button
        class="btn btn-tertiary prev disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-left"
          title="Previous Icon"
        />
      </button>
      <button
        class="btn btn-tertiary next disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-chevron-right"
          title="Next Icon"
        />
      </button>
    </div>
  </div>
</div>
`;
